--- a/.github/workflows/mac-build.yml
+++ b/.github/workflows/mac-build.yml
@@ -36,7 +36,7 @@ jobs:
           automake \
           libtool \
           python3 \
-          astyle   
+          clang-format
 
     - name: Initialize vcpkg submodule
       run: |
