--- a/src/plugins/SocketInput/CMakeLists.txt
+++ b/src/plugins/SocketInput/CMakeLists.txt
@@ -7,23 +7,22 @@ if(WIN32)
     target_sources(SocketInput PRIVATE
         ${SIGNALS_TOP_SOURCE_DIR}/src/lib_utils/socket_mingw.cpp
     )
-    target_link_libraries(SocketInput PRIVATE ws2_32)
+    target_link_libraries(SocketInput modules PRIVATE ws2_32)
 elseif(APPLE)
     target_sources(SocketInput PRIVATE
         ${SIGNALS_TOP_SOURCE_DIR}/src/lib_utils/socket_gnu.cpp
     )
+    target_link_libraries(SocketInput modules)
 else()
     target_sources(SocketInput PRIVATE
         ${SIGNALS_TOP_SOURCE_DIR}/src/lib_utils/socket_gnu.cpp
     )
+    target_link_libraries(SocketInput modules)
 endif()
 
 target_include_directories(SocketInput PRIVATE
     ${SIGNALS_TOP_SOURCE_DIR}/src
 )
 
-target_link_libraries(SocketInput
-    modules
-)
 
 signals_install_plugin(SocketInput ".smd")
