CMake: The INTERFACE, PUBLIC or PRIVATE option must appear as the second argument

--- a/src/plugins/SocketInput/CMakeLists.txt
+++ b/src/plugins/SocketInput/CMakeLists.txt
@@ -7,7 +7,7 @@ if(WIN32)
     target_sources(SocketInput PRIVATE
         ${SIGNALS_TOP_SOURCE_DIR}/src/lib_utils/socket_mingw.cpp
     )
-    target_link_libraries(SocketInput modules PRIVATE ws2_32)
+    target_link_libraries(SocketInput modules ws2_32)
 elseif(APPLE)
     target_sources(SocketInput PRIVATE
         ${SIGNALS_TOP_SOURCE_DIR}/src/lib_utils/socket_gnu.cpp
